infra/k8s/overlays/home/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  ingressClassName: traefik
  rules:
    - host: api.mikke.pics
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  name: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: garage-s3
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  ingressClassName: traefik
  rules:
    - host: media.mikke.pics
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: garage
                port:
                  name: s3-api
